<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">#kitinfo</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Timers</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="left_until">left until</string>
    <string name="ignore_text">Ignore</string>
    <string name="reset_app_title">Reset App</string>
    <string name="reset_app_description">Resets the app to default</string>
    <string name="action_update">Update</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
  	<string name="yes">yes</string>
  	<string name="no">no</string>
    <string name="ok">OK</string>
    
    <!-- TimerAdd -->
    <string name="add_custom_Event">Add your own Event</string>
    <string name="event">Event:</string>
    <string name="event_hint">Title of the event</string>
    <string name="message">Message:</string>
    <string name="message_hint">Text if event is in the past</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    
    <!-- status -->
    <string name="status_current_activity">"Current Activity:</string>
    <string name="status_last_message">Last Message:</string>
    <string name="status_current_users">Current Users online:</string>
	<string name="online">Online</string>
</resources>
