<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="5dp"
		    android:layout_marginTop="15dp"
		    android:orientation="vertical" 
		    android:isScrollContainer="true">
		    
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="5dp"
			    android:layout_marginTop="15dp"
			    android:background="@drawable/item_background"
			    android:orientation="vertical" >
			    
			    <TextView 
			    	android:text="@string/status_current_activity"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			    	android:layout_margin="5dp"
			    	android:textColor="#313739"
			        android:textSize="20sp"
			    />
			    
			    <TextView 
			        android:id="@+id/status_activity"
			    	android:text=""
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			    	android:layout_margin="5dp"
			    	android:textColor="#313739"
			        android:textSize="20sp"
			        android:gravity="center_horizontal"
			    />
			    
		    </LinearLayout>
	    
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="5dp"
			    android:layout_marginTop="15dp"
			    android:background="@drawable/item_background"
			    android:orientation="vertical" >
			    
			     <TextView 
			    	android:text="@string/status_last_message"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			    	android:layout_margin="5dp"
			    	android:textColor="#313739"
			        android:textSize="20sp"
			    />
			    
			    <TextView 
			        android:id="@+id/status_last_message"
			    	android:text=""
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			    	android:layout_margin="5dp"
			    	android:textColor="#313739"
			        android:textSize="20sp"
			        android:gravity="center_horizontal"
			    />
		    </LinearLayout>
	    
	    
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="5dp"
			    android:layout_marginTop="15dp"
			    android:background="@drawable/item_background"
			    android:orientation="vertical" >
			    
			     <TextView 
			    	android:text="@string/status_current_users"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			    	android:layout_margin="5dp"
			    	android:textColor="#313739"
			        android:textSize="20sp"
			    />
			    
			     <LinearLayout
        			android:id="@+id/status_user_online"
    				android:layout_margin="5dp"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content"
    				android:orientation="vertical"  > 
    			</LinearLayout> 
			     <!-- 
			    <TextView 
			        android:id="@+id/status_user_online"
			    	android:text=""
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			    	android:layout_margin="5dp"
			    	android:textColor="#313739"
			        android:textSize="20sp"
			        android:gravity="right"
			    />  -->
		    </LinearLayout>
	    </LinearLayout>
	
	</RelativeLayout>
</ScrollView>